syntax = "proto2";
option java_package = "cn.tim.xchat.core.model";
option java_outer_classname = "DataContentSerializer";

message DataContent{
  required uint32 action = 1;
  required string senderId = 2;
  required string receiveId = 3;
  required int32 timestamp = 4;

  message ChatMessage {
    required uint32 type = 1;
    optional string text = 2;
    optional string at = 3;
    optional string url = 4;
    optional string reply = 5;
  }

  required ChatMessage chatMessage = 5;
}